--- a/src/com/yheng/xianyuan/effectEditor/view/controlPanel/tool/Tool.mxml
+++ b/src/com/yheng/xianyuan/effectEditor/view/controlPanel/tool/Tool.mxml
@@ -3,7 +3,7 @@
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx" 
 		 width="100%" height="100%" 
-		 implements="com.codeTooth.actionscript.patterns.subject.IObserver" addedToStage="addToStageHandler(event)">
+		 implements="com.codeTooth.actionscript.patterns.subject.IObserver" addedToStage="addToStageHandler(event)" currentState="light">
 	<fx:Declarations>
 		<!-- 将非可视元素（例如服务、值对象）放在此处 -->
 	</fx:Declarations>
@@ -16,6 +16,8 @@
 			import com.yheng.xianyuan.effectEditor.command.CommandID;
 			import com.yheng.xianyuan.effectEditor.command.GetEffectCommandData;
 			import com.yheng.xianyuan.effectEditor.command.SetAssistantPointVisibleCommandData;
+			import com.yheng.xianyuan.effectEditor.command.SetEffectColorFilterCommandData;
+			import com.yheng.xianyuan.effectEditor.command.SetEffectColorTransformCommandData;
 			import com.yheng.xianyuan.effectEditor.command.SetEffectEmptyFramesCommandData;
 			import com.yheng.xianyuan.effectEditor.command.SetFPSCommandData;
 			import com.yheng.xianyuan.effectEditor.command.SetNameCommandData;
@@ -34,6 +36,8 @@
 			
 			import mx.controls.Alert;
 			import mx.events.ColorPickerEvent;
+			
+			import spark.events.IndexChangeEvent;
 			
 			//------------------------------------------------------------------------------------------------------------------------------
 			// 初始化
@@ -254,8 +258,106 @@
 				Mediator.commands.executeCommand(CommandID.SET_REFERENCE_OBJECT, new SetReferenceObjectCommandData(bytes));
 			}
 			
+			// 修改颜色编辑类型
+			private function colorTransformTypeChangeHandle(event:IndexChangeEvent):void
+			{
+				this.currentState = ddl.selectedItem.value;
+			}
+			
+			[Bindable]
+			public var v1:int = 0;
+			[Bindable]
+			public var v2:int = 0;
+			[Bindable]
+			public var v3:int = 0;
+			[Bindable]
+			public var v4:int = 0;
+			public function refreshCurrentFilterColor():void
+			{
+				if(_selectEffectID == -1)
+				{
+					return;
+				}
+				
+				Mediator.commands.executeCommand(CommandID.SET_EFFECT_COLOR_FILTER, new SetEffectColorFilterCommandData(
+					_selectEffectID, v1, v2, v3, v4
+				));
+			}
+			private function resetColorFilterHandler(event:MouseEvent):void
+			{
+				if(_selectEffectID == -1)
+				{
+					return;
+				}
+			}
+			
+			[Bindable]
+			public var a:int = 100;
+			[Bindable]
+			public var r:int = 100;
+			[Bindable]
+			public var g:int = 100;
+			[Bindable]
+			public var b:int = 100;
+			[Bindable]
+			public var aa:int;
+			[Bindable]
+			public var ar:int;
+			[Bindable]
+			public var ag:int;
+			[Bindable]
+			public var ab:int;
+			[Bindable]
+			public function get l():int
+			{
+				return (ar + ag + ab) / 3;
+			}
+			public function set l(value:int):void
+			{
+				ar = ag = ab = value;
+			}
+			[Bindable]
+			public var ca:int = 100;
+			[Bindable]
+			public var cr:int
+			[Bindable]
+			public var cg:int
+			[Bindable]
+			public var cb:int
+			public function refreshCurrentTransformColor(useColorPanelData:Boolean = false):void
+			{
+				if(_selectEffectID == -1)
+				{
+					return;
+				}
+				
+				if (useColorPanelData)
+				{
+					this.r = 100 + cr *  ca / 255;
+					this.g = 100 + cg *  ca / 255;
+					this.b = 100 + cb *  ca / 255;
+				}
+				
+				Mediator.commands.executeCommand(CommandID.SET_EFFECT_COLOR_TRANSFORM, new SetEffectColorTransformCommandData(
+					_selectEffectID, r / 100, g / 100, b / 100, a / 100, ar, ag, ab, aa
+				));
+			}
+			
+			private function resetColorTransformHandler(event:MouseEvent):void
+			{
+				if(_selectEffectID == -1)
+				{
+					return;
+				}
+			}
+			
 		]]>
 	</fx:Script>
+	<s:states>
+		<s:State name="light"/>
+		<s:State name="color"/>
+		<s:State name="adv"/>
+	</s:states>
 	<s:HGroup verticalAlign="middle">
 		<s:Label text="名称："/>
 		<s:TextInput id="nameInput" width="150"/>
@@ -287,19 +389,116 @@
 		<s:Button label="确定" width="45" click="fpsChangeHandler(event)"/>
 	</s:HGroup>
 	<mx:HRule width="100%"/>
-	<s:HGroup>
-		<s:VGroup horizontalAlign="center">
-			<s:Label text="前插入空白帧数"/>
-			<s:TextInput id="emptyFramesPrefixInput" width="90" contentBackgroundColor="#A8DAFD" text="0" textAlign="center" restrict="0-9"/>
+	<s:Scroller width="100%" height="100%" horizontalScrollPolicy="off">
+		<s:VGroup>
+			<s:HGroup>
+				<s:VGroup horizontalAlign="center">
+					<s:Label text="前插入空白帧数"/>
+					<s:TextInput id="emptyFramesPrefixInput" width="90" contentBackgroundColor="#A8DAFD" text="0" textAlign="center" restrict="0-9"/>
+				</s:VGroup>
+				<s:VGroup horizontalAlign="center">
+					<s:Label text="动画帧数"/>			
+					<s:TextInput id="framesInput" width="50" editable="false" contentBackgroundColor="0xBBBBBB" text="0" textAlign="center" selectable="false"/>
+				</s:VGroup>
+				<s:VGroup horizontalAlign="center">
+					<s:Label text="后追加空白帧数"/>
+					<s:TextInput id="emptyFramesSuffixInput" width="90" contentBackgroundColor="#A8DAFD" text="0" textAlign="center" restrict="0-9"/>
+				</s:VGroup>
+			</s:HGroup>
+			<s:Button label="确定" width="45" click="setEmptyFramesHandler(event)"/>
+			<mx:HRule width="100%"/>
+			
+			<s:VGroup>
+				<s:HGroup verticalAlign="middle">
+					<s:Label text="颜色滤镜："/>
+					<s:Button label="重置" click="resetColorFilterHandler(event)"/>
+				</s:HGroup>
+				<s:DropDownList id="ddl" width="200" selectedIndex="2" labelField="label" change="colorTransformTypeChangeHandle(event)">
+					<s:dataProvider>
+						<s:ArrayList>
+							<fx:Object label="亮度" value="light"/>
+							<fx:Object label="色调" value="color"/>
+							<fx:Object label="高级" value="adv"/>
+						</s:ArrayList>
+					</s:dataProvider>
+				</s:DropDownList>
+				<s:Group includeIn="light" x="0" y="23" width="100%">
+					<s:Label x="4" y="5" text="亮度:"/>
+					<s:HSlider x="36" y="6" width="95" value="@{l}" minimum="-255" maximum="255" change="refreshCurrentTransformColor()"/>
+					<s:NumericStepper x="135" y="0" width="50" minimum="-255" maximum="255" value="@{l}" change="refreshCurrentTransformColor()"/>
+					<s:Label x="188" y="5" text="%"/>
+				</s:Group>
+				<s:VGroup x="0" y="23" includeIn="color" gap="5">
+					<s:Group>
+						<s:Label x="4" y="5" text="色调:"/>
+						<s:HSlider x="36" y="6" width="95" value="@{ca}" minimum="0" maximum="100" change="refreshCurrentTransformColor(true)"/>
+						<s:NumericStepper x="135" y="0" width="50" minimum="0" maximum="100" value="@{ca}" change="refreshCurrentTransformColor(true)"/>
+						<s:Label x="188" y="5" text="%"/>
+					</s:Group>
+					<s:Group>
+						<s:Label x="4" y="5" text="红:"/>
+						<s:HSlider x="36" y="6" width="95" value="@{cr}" minimum="-255" maximum="255" change="refreshCurrentTransformColor(true)"/>
+						<s:NumericStepper x="135" y="0" width="50" minimum="-255" maximum="255" value="@{cr}" change="refreshCurrentTransformColor(true)"/>
+					</s:Group>
+					<s:Group>
+						<s:Label x="4" y="5" text="绿:"/>
+						<s:HSlider x="36" y="6" width="95" value="@{cg}" minimum="-255" maximum="255" change="refreshCurrentTransformColor(true)"/>
+						<s:NumericStepper x="135" y="0" width="50" minimum="-255" maximum="255" value="@{cg}" change="refreshCurrentTransformColor(true)"/>
+					</s:Group>
+					<s:Group>
+						<s:Label x="4" y="5" text="蓝:"/>
+						<s:HSlider x="36" y="6" width="95" value="@{cb}" minimum="-255" maximum="255" change="refreshCurrentTransformColor(true)"/>
+						<s:NumericStepper x="135" y="0" width="50" minimum="-255" maximum="255" value="@{cb}" change="refreshCurrentTransformColor(true)"/>
+					</s:Group>
+				</s:VGroup>
+				<s:Group x="0" y="23" includeIn="adv">
+					<s:Label x="0" y="7" width="45" text="Alpha:" textAlign="right"/>
+					<s:NumericStepper x="50" y="2" width="50" minimum="-100" maximum="100" value="@{a}" change="refreshCurrentTransformColor()"/>
+					<s:Label x="0" y="34" width="45" text="红:" textAlign="right"/>
+					<s:NumericStepper x="50" y="27" width="50" minimum="-100" maximum="100" value="@{r}" change="refreshCurrentTransformColor()"/>
+					<s:Label x="0" y="58" width="45" text="绿:" textAlign="right"/>
+					<s:NumericStepper x="50" y="52" width="50" minimum="-100" maximum="100" value="@{g}" change="refreshCurrentTransformColor()"/>
+					<s:Label x="0" y="81" width="45" text="蓝:" textAlign="right"/>
+					<s:NumericStepper x="50" y="77" width="50" minimum="-100" maximum="100" value="@{b}" change="refreshCurrentTransformColor()"/>
+					<s:Label x="102" y="8" width="40" text="xA +" textAlign="right"/>
+					<s:NumericStepper x="150" y="1" width="50" minimum="-255" maximum="255" value="@{aa}" change="refreshCurrentTransformColor()"/>
+					<s:Label x="102" y="34" width="40" text="xR +" textAlign="right"/>
+					<s:NumericStepper x="150" y="26" width="50" minimum="-255" maximum="255" value="@{ar}" change="refreshCurrentTransformColor()"/>
+					<s:Label x="102" y="57" width="40" text="xG +" textAlign="right"/>
+					<s:NumericStepper x="150" y="51" width="50" minimum="-255" maximum="255" value="@{ag}" change="refreshCurrentTransformColor()"/>
+					<s:Label x="102" y="81" width="40" text="xB +" textAlign="right"/>
+					<s:NumericStepper x="150" y="76" width="50" minimum="-255" maximum="255" value="@{ab}" change="refreshCurrentTransformColor()"/>
+				</s:Group>
+			</s:VGroup>
+			
+			<mx:HRule width="100%"/>
+			
+			<s:VGroup>
+				<s:HGroup verticalAlign="middle">
+					<s:Label text="颜色转换："/>
+					<s:Button label="重置" click="resetColorTransformHandler(event)"/>
+				</s:HGroup>
+				<s:Group>
+					<s:Label x="4" y="5" text="亮度:"/>
+					<s:HSlider x="50" y="6" width="95" value="@{v1}" minimum="-100" maximum="100" change="refreshCurrentFilterColor()"/>
+					<s:NumericStepper x="149" y="0" width="50" minimum="-100" maximum="100" value="@{v1}" change="refreshCurrentFilterColor()"/>
+				</s:Group>
+				<s:Group>
+					<s:Label x="4" y="5" text="对比度:"/>
+					<s:HSlider x="50" y="6" width="95" value="@{v2}" minimum="-100" maximum="100" change="refreshCurrentFilterColor()"/>
+					<s:NumericStepper x="149" y="0" width="50" minimum="-100" maximum="100" value="@{v2}" change="refreshCurrentFilterColor()"/>
+				</s:Group>
+				<s:Group>
+					<s:Label x="4" y="5" text="饱和度:"/>
+					<s:HSlider x="50" y="6" width="95" value="@{v3}" minimum="-100" maximum="100" change="refreshCurrentFilterColor()"/>
+					<s:NumericStepper x="149" y="0" width="50" minimum="-100" maximum="100" value="@{v3}" change="refreshCurrentFilterColor()"/>
+				</s:Group>
+				<s:Group>
+					<s:Label x="4" y="5" text="色相:"/>
+					<s:HSlider x="50" y="6" width="95" value="@{v4}" minimum="-180" maximum="180" change="refreshCurrentFilterColor()"/>
+					<s:NumericStepper x="149" y="0" width="50" minimum="-180" maximum="180" value="@{v4}" change="refreshCurrentFilterColor()"/>
+				</s:Group>
+			</s:VGroup>
 		</s:VGroup>
-		<s:VGroup horizontalAlign="center">
-			<s:Label text="动画帧数"/>			
-			<s:TextInput id="framesInput" width="50" editable="false" contentBackgroundColor="0xBBBBBB" text="0" textAlign="center" selectable="false"/>
-		</s:VGroup>
-		<s:VGroup horizontalAlign="center">
-			<s:Label text="后追加空白帧数"/>
-			<s:TextInput id="emptyFramesSuffixInput" width="90" contentBackgroundColor="#A8DAFD" text="0" textAlign="center" restrict="0-9"/>
-		</s:VGroup>
-	</s:HGroup>
-	<s:Button label="确定" width="45" click="setEmptyFramesHandler(event)"/>
+	</s:Scroller>
 </s:VGroup>
